@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: ExN03EventActionMessenger.hh,v 1.6 2002-01-09 17:24:11 ranjard Exp $
+// $Id: ExN03EventActionMessenger.hh,v 1.7 2002-12-16 16:37:26 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -36,6 +36,7 @@
 #include "G4UImessenger.hh"
 
 class ExN03EventAction;
+class G4UIdirectory;
 class G4UIcmdWithAString;
 class G4UIcmdWithAnInteger;
 
@@ -50,8 +51,9 @@ class ExN03EventActionMessenger: public G4UImessenger
     void SetNewValue(G4UIcommand*, G4String);
     
   private:
-    ExN03EventAction*   eventAction;   
-    G4UIcmdWithAString* DrawCmd;
+    ExN03EventAction*     eventAction;
+    G4UIdirectory*        eventDir;   
+    G4UIcmdWithAString*   DrawCmd;
     G4UIcmdWithAnInteger* PrintCmd;    
 };
 
